k8s/service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: date-webapp-service
  namespace: test-webapp
  labels:
    app: date-webapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: date-webapp
