k8s/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: date-webapp-nodeport
  namespace: test-webapp
  labels:
    app: date-webapp
    service-type: external
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: date-webapp
