k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: test-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # hostname mappato su /etc/hosts
    - host: wsl.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: date-webapp-service
                port:
                  number: 8080
